Requires java 21 Fixed problem with linecondition in combination with firstlineasschema.